add record number
[Issue #23] https://github.com/GreenNerd/ideaegg/issues/23

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -15,4 +15,4 @@
           .item Let your idea fly!
       .mastfoot
         .inner
-          p.text-muted Copyright © 2014  ❤  Ideaegg
+          p.text-muted Copyright © 2015  ❤  Ideaegg  粤ICP备13069755号-1
